--- a/ExportToExcel.Test/ExportToExcel.Test.csproj
+++ b/ExportToExcel.Test/ExportToExcel.Test.csproj
@@ -51,8 +51,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
+    <None Include="..\ExportToExcel\App.config">
+      <Link>App.config</Link>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
