--- a/ExportToExcel/App.config
+++ b/ExportToExcel/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Username" value=""/>
-    <add key="Password" value=""/>
+    <add key="Username" value="username"/>
+    <add key="Password" value="password"/>
     <add key="Url" value="https://my.sharpcloud.com"/>
-    <add key="StoryId" value=""/>
+    <add key="StoryId" value="story-id"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
